@@ -34,8 +34,10 @@ mpeg1_2_video_packetizer_c(generic_reader_c *p_reader,
                            int dheight,
                            bool framed)
   : video_packetizer_c(p_reader, p_ti, "V_MPEG1", fps, width, height)
-  , m_framed(framed)
-  , m_aspect_ratio_extracted(true)
+  , m_framed{framed}
+  , m_aspect_ratio_extracted{true}
+  , m_num_removed_stuffing_bytes{}
+  , m_debug_stuffing_removal{debugging_requested("mpeg1_2|mpeg1_2_stuffing_removal")}
 {
 
   set_codec_id((boost::format("V_MPEG%1%") % version).str());
@@ -51,6 +53,10 @@ mpeg1_2_video_packetizer_c(generic_reader_c *p_reader,
   // m_parser.SeparateSequenceHeaders();
 }
 
+mpeg1_2_video_packetizer_c::~mpeg1_2_video_packetizer_c() {
+  mxdebug_if(m_debug_stuffing_removal, boost::format("Total number of stuffing bytes removed: %1%\n") % m_num_removed_stuffing_bytes);
+}
+
 int
 mpeg1_2_video_packetizer_c::process_framed(packet_cptr packet) {
   if (0 == packet->data->get_size())
@@ -60,6 +66,7 @@ mpeg1_2_video_packetizer_c::process_framed(packet_cptr packet) {
     return video_packetizer_c::process(packet);
 
   put_sequence_headers_into_codec_state(packet);
+  remove_stuffing_bytes(packet->data);
 
   return video_packetizer_c::process(packet);
 }
@@ -114,6 +121,75 @@ mpeg1_2_video_packetizer_c::put_sequence_headers_into_codec_state(packet_cptr pa
   return true;
 }
 
+void
+mpeg1_2_video_packetizer_c::remove_stuffing_bytes(memory_cptr data) {
+  mxdebug_if(m_debug_stuffing_removal, boost::format("Starting stuff removal, frame size %1%\n") % data->get_size());
+
+  auto buf              = data->get_buffer();
+  auto size             = data->get_size();
+  size_t pos            = 4;
+  size_t stuffing_start = 0;
+  auto marker           = get_uint32_be(buf);
+  bool in_slice         = false;
+  auto num_keep         = 1;
+
+  auto mid_remover      = [&]() {
+    if (!stuffing_start || (stuffing_start >= (pos - 4)))
+      return;
+
+    auto num_stuffing_bytes       = pos - 4 - stuffing_start;
+    m_num_removed_stuffing_bytes += num_stuffing_bytes;
+
+    ::memmove(&buf[stuffing_start], &buf[pos - 4], size - pos + 4);
+
+    pos  -= num_stuffing_bytes;
+    size -= num_stuffing_bytes;
+
+    mxdebug_if(m_debug_stuffing_removal, boost::format("    Stuffing in the middle: %1%\n") % num_stuffing_bytes);
+  };
+
+  while (pos < size) {
+    if ((MPEGVIDEO_SLICE_START_CODE_LOWER <= marker) && (MPEGVIDEO_SLICE_START_CODE_UPPER >= marker)) {
+      mxdebug_if(m_debug_stuffing_removal, boost::format("  Slice start code at %1%\n") % (pos - 4));
+
+      mid_remover();
+
+      in_slice       = true;
+      stuffing_start = 0;
+
+    } else if ((marker & 0xffffff00) == 0x00000100) {
+      mxdebug_if(m_debug_stuffing_removal, boost::format("  Non-slice start code at %1%\n") % (pos - 4));
+
+      mid_remover();
+
+      in_slice       = false;
+      stuffing_start = 0;
+
+    } else if (in_slice && !stuffing_start && (marker == 0x00000000)) {
+      mxdebug_if(m_debug_stuffing_removal, boost::format("    Start at %1%\n") % (pos - 4 + num_keep));
+
+      stuffing_start = pos - 4 + num_keep;
+
+    }
+
+    marker <<= 8;
+    marker  |= buf[pos];
+    ++pos;
+  }
+
+  if ((marker & 0xffffff00) == 0x00000100)
+    mid_remover();
+
+  else if (stuffing_start && (stuffing_start < size)) {
+    mxdebug_if(m_debug_stuffing_removal, boost::format("    Stuffing at the end: in_slice %1% stuffing_start %2% stuffing_size %3%\n") % in_slice % stuffing_start % (stuffing_start ? size - stuffing_start : 0));
+
+    m_num_removed_stuffing_bytes += size - stuffing_start;
+    size                          = stuffing_start;
+  }
+
+  data->set_size(size);
+}
+
 int
 mpeg1_2_video_packetizer_c::process(packet_cptr packet) {
   if (0.0 > m_fps)
@@ -159,6 +235,7 @@ mpeg1_2_video_packetizer_c::process_unframed(packet_cptr packet) {
       new_packet->time_factor = MPEG2_PICTURE_TYPE_FRAME == frame->pictureStructure ? 1 : 2;
 
       put_sequence_headers_into_codec_state(new_packet);
+      remove_stuffing_bytes(new_packet->data);
 
       video_packetizer_c::process(new_packet);
 
