@@ -1,3 +1,10 @@
+2012-08-02  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: new feature: mkvmerge will remove stuffing bytes from
+	MPEG-1/-2 video streams that are used to keep the bit rate above
+	certain levels (the 0 bytes between slices and the following start
+	code). Implements #734.
+
 2012-08-01  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: Fixed audio/video synchronisation when
